// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styled Test CSS 1`] = `
.c0 {
  width: 100% !important;
  margin-bottom: 20px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.20);
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  -webkit-box-pack: center !important;
  -webkit-justify-content: center !important;
  -ms-flex-pack: center !important;
  justify-content: center !important;
  background: rgba(32,31,33,.5) !important;
  color: rgba(255,255,255,.8) !important;
}

<Adapter
  className="c0"
/>
`;

exports[`Styled Test CSS 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<Adapter
  className="c0"
/>
`;

exports[`Styled Test CSS 3`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
  className="c0"
/>
`;
